--- a/PruebaRicardo-war/web/index.html
+++ b/PruebaRicardo-war/web/index.html
@@ -14,5 +14,6 @@ and open the template in the editor.
         <div>hola MUNDO cruel</div>
         <div>Nuevo cambio</div>
         <div>Hola Juan Carlos</div>
+        <div>OTRO camBIO</div>
     </body>
 </html>
