--- a/PruebaRicardo-war/web/index.html
+++ b/PruebaRicardo-war/web/index.html
@@ -15,5 +15,7 @@ and open the template in the editor.
         <div>Nuevo cambio</div>
         <div>Hola Juan Carlos</div>
         <div>OTRO camBIO</div>
+        <div>Cambio 3</div>
+        
     </body>
 </html>
